# orion-sdr

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  pyproject.toml  sdr.pyi
.cargo/: config.toml
.claude/: settings.json
.claude/plans/: ft8-full-implementation.md
.claude/skills/release/: SKILL.md
.claude/skills/release-prep/: SKILL.md
.github/workflows/: ci.yml  publish.yml
crates/orion-sdr-view/: Cargo.toml
docs/: api.md  commands.md  conventions.md  demodulate.md  design.md  features.md  modulate.md  performance.md  python.md  source.md  throughput.md
python/orion_sdr/: __init__.py  __init__.pyi
python/orion_sdr/liborion_sdr.dylib.dSYM/Contents/: Info.plist
python/tests/: conftest.py  test_ft8.py  test_ofdm.py  test_psk31.py  test_roundtrip.py  test_unit.py
src/: core.rs  demodulate.rs  lib.rs  modulate.rs  util.rs
src/codec/: crc.rs  ft4.rs  ft8.rs  gray.rs  ldpc.rs  mod.rs  morse.rs  psk31.rs  psk31_conv.rs  varicode.rs
src/demodulate/: am.rs  bpsk.rs  cw.rs  fm.rs  ft4.rs  ft8.rs  mod.rs  ofdm.rs  pm.rs  psk31.rs  qam.rs  qpsk.rs  ssb.rs
src/dsp/: agc.rs  dc.rs  decim.rs  fir.rs  iir.rs  mod.rs  nco.rs  rotator.rs
src/message/: callsign.rs  free_text.rs  grid.rs  message.rs  mod.rs  tables.rs
src/modulate/: am.rs  bpsk.rs  cw.rs  fm.rs  ft4.rs  ft8.rs  mod.rs  ofdm.rs  pm.rs  psk31.rs  qam.rs  qpsk.rs  ssb.rs
src/multicarrier/: config.rs  cyclic_prefix.rs  fft.rs  grid.rs  mod.rs
src/python/: demodulate.rs  ft8.rs  mod.rs  modulate.rs  ofdm.rs  psk31.rs
src/sync/: costas.rs  ft4_sync.rs  ft8_sync.rs  mod.rs  ofdm_sync.rs  psk31_sync.rs  waterfall.rs
src/tests/: mod.rs  roundtrip.rs  throughput.rs  unit.rs
src/tests/performance/: mod.rs
src/tests/roundtrip/: am.rs  bpsk.rs  cw.rs  fm.rs  ft4.rs  ft8.rs  ft8_snr.rs  message.rs  mod.rs  pm.rs  psk31.rs  psk31_snr.rs  qam.rs  qpsk.rs  ssb.rs
src/tests/throughput/: cw.rs  mod.rs
src/tests/unit/: agc.rs  am.rs  bpsk.rs  chains.rs  codec.rs  dsp.rs  fm.rs  ft4.rs  ft8.rs  message.rs  mod.rs  pm.rs  psk31.rs  qam.rs  qpsk.rs  ssb.rs  sync.rs
tests/: performance.rs  psk31_stream.rs  roundtrip.rs  spectral.rs  unit.rs
tests/common/: mod.rs
tests/performance/snr/: ft8.rs  mod.rs  ofdm.rs  ofdm_sync.rs  psk31.rs
tests/performance/throughput/: am.rs  bpsk.rs  cw.rs  fm.rs  ft4.rs  ft8.rs  mod.rs  multicarrier.rs  ofdm.rs  pm.rs  psk31.rs  qam.rs  qpsk.rs  ssb.rs
tests/roundtrip/: am.rs  bpsk.rs  cw.rs  fm.rs  ft4.rs  ft8.rs  helpers.rs  ofdm.rs  ofdm_snr.rs  pm.rs  psk31.rs  qam.rs  qpsk.rs  ssb.rs
tests/unit/: agc.rs  am.rs  bpsk.rs  chains.rs  codec.rs  dsp.rs  fm.rs  ft4.rs  ft8.rs  helpers.rs  message.rs  morse.rs  multicarrier.rs  ofdm.rs  ofdm_sync.rs  pm.rs  psk31.rs  qam.rs  qpsk.rs  spectral.rs  ssb.rs  sync.rs
(+15 files in other folders)
