[package]
name = "orion-sdr"
version = "0.0.1"
edition = "2024"
description = "Early scaffold for a Rust DSP/SDR block library targeting HF-to-UHF, satellites, and Python bindings. Roadmap inside."
license = "MIT OR Apache-2.0"
repository = "https://github.com/skynavga/orion-sdr"
readme = "README.md"
keywords = ["sdr", "dsp", "radio", "satellite"]
categories = ["science", "embedded", "no-std::no-alloc"]
