[package]
name = "orion-sdr"
version = "0.0.10"
edition = "2024"
description = "DSP/SDR block library targeting HF-to-UHF, satellites, and Python bindings. Roadmap inside."
license = "MIT OR Apache-2.0"
repository = "https://github.com/skynavga/orion-sdr"
readme = "README.md"
keywords = ["sdr", "dsp", "radio", "satellite"]
categories = ["science", "embedded", "no-std::no-alloc"]

[lib]
name = "sdr"
crate-type = ["cdylib", "rlib"]

[features]
# Enable SIMD or other accelerations later
simd = []

[dependencies]
num-complex = "0.4"
thiserror = "1"
# FIR windowing helpers
realfft = "3"
rustfft = "6"

[dependencies.pyo3]
version = "0.22"
features = ["extension-module"]

[dependencies.numpy]
version = "0.22"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
