[package]
name = "orion-sdr"
version = "0.0.16"
edition = "2024"
description = "DSP/SDR block library targeting HF-to-UHF, satellites, and Python bindings. Roadmap inside."
license = "MIT OR Apache-2.0"
repository = "https://github.com/skynavga/orion-sdr"
readme = "README.md"
keywords = ["sdr", "dsp", "radio", "satellite"]
categories = ["science", "embedded", "no-std::no-alloc"]
include = [
    "src/**/*",
    "python/**/*",
    "Cargo.toml",
    "pyproject.toml",
    "README.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
]

[lib]
name = "orion_sdr"
crate-type = ["cdylib", "rlib"]

[features]
simd = []
throughput = []
extension-module = ["dep:pyo3", "pyo3/extension-module", "dep:numpy"]

[dependencies]
num-complex = "0.4"
thiserror = "1"
# FIR windowing helpers
realfft = "3"
rustfft = "6"

[dependencies.pyo3]
version = "0.28"
features = ["abi3-py312"]
optional = true

[dependencies.numpy]
version = "0.28"
optional = true

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
